--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.16",
+		"@tailwindcss/vite": "^4.1.7",
 		"@types/jsrsasign": "^10.5.15",
-		"autoprefixer": "^10.4.20",
-		"bits-ui": "^1.4.8",
+		"bits-ui": "^2.2.0",
 		"clsx": "^2.1.1",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
@@ -36,26 +36,31 @@
 		"globals": "^15.14.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
-		"prettier-plugin-tailwindcss": "^0.6.10",
+		"prettier-plugin-tailwindcss": "^0.6.11",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"tailwind-merge": "^3.3.0",
 		"tailwind-variants": "^1.0.0",
-		"tailwindcss": "^3.4.17",
-		"tailwindcss-animate": "^1.0.7",
+		"tailwindcss": "^4.1.7",
+		"tw-animate-css": "^1.3.0",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.0.0",
 		"vitest": "^3.0.0"
 	},
 	"dependencies": {
+		"@lucide/svelte": "^0.511.0",
 		"@zoom/videosdk": "^2.1.10",
 		"axios": "^1.9.0",
 		"firebase": "^11.7.3",
 		"firebase-admin": "^13.4.0",
+		"formsnap": "^2.0.1",
 		"jsonwebtoken": "^9.0.2",
 		"jsrsasign": "^11.1.0",
 		"mode-watcher": "0.5.1",
-		"query-string": "^9.2.0"
+		"paneforge": "1.0.0-next.5",
+		"query-string": "^9.2.0",
+		"svelte-sonner": "^1.0.3",
+		"vaul-svelte": "1.0.0-next.7"
 	}
 }
