--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
+		"@internationalized/date": "^3.5.6",
+		"@lucide/svelte": "^0.482.0",
 		"@playwright/test": "^1.49.1",
 		"@sveltejs/adapter-node": "^5.2.11",
 		"@sveltejs/kit": "^2.16.0",
@@ -49,7 +51,6 @@
 		"vitest": "^3.0.0"
 	},
 	"dependencies": {
-		"@lucide/svelte": "^0.511.0",
 		"@zoom/videosdk": "^2.1.10",
 		"axios": "^1.9.0",
 		"firebase": "^11.7.3",
