--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
 	},
 	"dependencies": {
 		"@zoom/videosdk": "^2.1.10",
+		"agora-rtc-sdk-ng": "^4.23.4",
+		"agora-token": "^2.0.5",
 		"axios": "^1.9.0",
 		"firebase": "^11.7.3",
 		"firebase-admin": "^13.4.0",
