--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@internationalized/date": "^3.8.2",
 		"@lucide/svelte": "^0.513.0",
 		"@playwright/test": "^1.49.1",
+		"@sveltejs/adapter-netlify": "^5.0.2",
 		"@sveltejs/adapter-node": "^5.2.11",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
