--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.16",
 		"@tailwindcss/vite": "^4.1.7",
+		"@tanstack/table-core": "^8.21.3",
 		"@types/jsrsasign": "^10.5.15",
 		"bits-ui": "^2.8.10",
 		"clsx": "^2.1.1",
